Fixed searchBar from overlapping mod bar and login tab on modbar

--- a/navigation_dev.css
+++ b/navigation_dev.css
@@ -76,7 +76,7 @@
     right: 0;
     display: block;
     position: absolute;
-    top: 14px;
+    top: 35px;
 }
 
 .dropdown-menu {
